Updated dep versions. (#176)
* Updated dep versions.

* Update README.